<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="sampleMessageBody">This is a sample message body</string>
    <string name="sampleDate">00/00/00 - 00:00:00</string>
    <string name="title_activity_story_view">StoryViewActivity</string>
    <string name="follow_button">FOLLOWING</string>
    <string name="loginTabTitle">Login</string>
    <string name="signupTabTitle">Signup</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="image_url">Profile Image URL:</string>
    <string name="register">Register</string>
    <string name="default_male_image_url">https://raw.githubusercontent.com/mrchristensen/Tweeter/master/server/src/main/java/edu/byu/cs/tweeter/server/resources/dafny.png?token=ALDCLZTJF3B6EVFT7XYNC526QF32U</string>
    <string name="default_female_image_url">https://raw.githubusercontent.com/mrchristensen/Tweeter/master/server/src/main/java/edu/byu/cs/tweeter/server/resources/daisy.png?token=ALDCLZTBHGVXW27AWFPQNTC6QF36C</string>
    <string name="searchMenu">Search</string>
    <string name="logoutMenu">Logout</string>
    <string name="Follow">Follow</string>
    <string name="Following">Following</string>
</resources>
