<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.ui.main.following.FollowingFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/userImageContentDescription"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/transparent"
        />

<!--    <ImageView-->
<!--        android:id="@+id/userImage"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:contentDescription="@string/userImageContentDescription" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/userImage">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/sampleUserName"/>

        <TextView
            android:id="@+id/userAlias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleAlias"/>
    </LinearLayout>
</RelativeLayout>